# robotica-remote-rust

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  LICENSE-ICONS  README.md  build  deploy  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: ci.yml
src/: button.rs  config.rs  displays.rs  main.rs  messages.rs  mqtt.rs  touch.rs  wifi.rs
src/boards/: lca2021_badge.rs  makerfab.rs  mod.rs  robotica.rs
src/boards/makerfab/: touchscreen.rs
src/button/: esp.rs  gpio.rs  mod.rs  touch.rs
src/button_controllers/: lights.rs  mod.rs  music.rs  switch.rs
src/display/: graphics.rs  icon.rs  lca2021_badge.rs  makerfab.rs  mod.rs  robotica.rs
src/display/images/: build  fan_auto_64x64.tga  fan_off_64x64.tga  light_auto_64x64.tga  night_auto_64x64.tga  night_error_64x64.tga  night_off_64x64.tga  night_on_64x64.tga  schedule_auto_64x64.tga  schedule_error_64x64.tga  schedule_off_64x64.tga  schedule_on_64x64.tga  select_auto_64x64.tga  speaker_auto_64x64.tga  speaker_error_64x64.tga  speaker_off_64x64.tga  speaker_on_64x64.tga  trumpet_auto_64x64.tga  trumpet_error_64x64.tga  trumpet_off_64x64.tga  trumpet_on_64x64.tga  tv_auto_64x64.tga
src/hardware/: esp32.rs
src/images/: build  fan_hard_off_64x64.tga  fan_off_64x64.tga  fan_on_64x64.tga  fan_on_other_64x64.tga  fan_unknown_64x64.tga  light_64x64.pnm  light_unknown_64x64.tga
src/input/: esp32.rs  mod.rs
src/input/esp32/: gpio.rs  mod.rs  touch.rs
src/wifi/: esp.rs  mod.rs
