[package]
name = "robotica-remote-rust"
version = "0.22.8"
authors = ["brianmay"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A remote control system based on MQTT"
repository = "https://github.com/brianmay/robotica-remote-rust/"
license = "MIT OR Apache-2.0"
readme = "README.md"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native", "lca2021_badge"]

# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]
lca2021_badge = ["shared-bus", "ssd1306"]
robotica = ["smart-leds", "smart-leds-trait", "ws2812-esp32-rmt-driver"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
esp-idf-svc = "0.37.0"
esp-idf-hal = "0.33.1"
embedded-svc = "0.17.1"
embedded-hal = "=1.0.0-alpha.7"
embedded-graphics = "0.7"
# display-interface = "0.4"
# display-interface-spi = "0.4"
# st7789 = "0.6"
# ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
ssd1306 = {version = "0.7", optional = true}
# epd-waveshare = "0.5.0"
smol = "1.2"
shared-bus = {version = "0.2.2", optional = true}
serde_json = "1.0"
tinytga = "0.4.1"
pretty_env_logger = "0.4.0"
arr_macro = "0.1.3"
smart-leds = { version = "0.3.0", optional = true}
smart-leds-trait = { version = "0", optional = true}
ws2812-esp32-rmt-driver = { version = "0.2.1", optional = true}

[build-dependencies]
embuild = "0.28"
anyhow = "1"
