[package]
name = "robotica-remote-rust"
version = "0.22.8"
authors = ["brianmay"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "A remote control system based on MQTT"
repository = "https://github.com/brianmay/robotica-remote-rust/"
license = "MIT OR Apache-2.0"
readme = "README.md"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }
embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics", branch = "master" }
embedded-graphics-core = { git = "https://github.com/embedded-graphics/embedded-graphics", branch = "master" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native", "lca2021_badge"]

# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]
lca2021_badge = ["dep:shared-bus", "dep:ssd1306"]
makerfab = [
    "dep:display-interface",
    "dep:display-interface-spi",
    "dep:mipidsi",
    "dep:ft6x36",
]
robotica = [
    "dep:smart-leds",
    "dep:smart-leds-trait",
    "dep:ws2812-esp32-rmt-driver",
]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
heapless = "0.7.16"
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.31.7", features = ["binstart"] }
esp-idf-svc = { version = "0.42.3", features = ["experimental"] }
esp-idf-hal = { version = "0.38.1" }
embedded-svc = "0.22.1"
embedded-hal = "=1.0.0-alpha.8"
embedded-graphics = "0.7.1"
display-interface = { version = "0.4", optional = true }
display-interface-spi = { version = "0.4", optional = true }
# st7789 = "0.6"
# ili9341 = { version = "0.5", path = "/home/brian/tmp/ili9341-rs", optional = true }
mipidsi = { version = "0.2.1", optional = true }
# mipidsi = { version = "0.2.0", path = "/home/brian/tmp/mipidsi", optional = true }
ssd1306 = { version = "0.7", optional = true }
# epd-waveshare = "0.5.0"
smol = "1.2"
shared-bus = { version = "0.2.4", optional = true }
serde_json = "1.0"
tinytga = "0.4.1"
pretty_env_logger = "0.4.0"
arr_macro = "0.1.3"
smart-leds = { version = "0.3.0", optional = true }
smart-leds-trait = { version = "0", optional = true }
ws2812-esp32-rmt-driver = { version = "0.4.0", optional = true }
hex = "0.4.3"
ft6x36 = { version = "0.4.0", optional = true }
embedded-graphics-framebuf = "0.1.0"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
